# AstrBot_MaiBot

./: .gitignore  AGENTS.md  ASYNC_TASK_new.md  Makefile  README.md  README_en.md  README_fr.md  README_ja.md  README_ru.md  README_zh-TW.md  README_zh.md  compose-with-shipyard.yml  desktop_main.py  maibot_statistics.html  pyproject.toml  requirements.txt
.github/workflows/: build-docs.yml  docker-image.yml  sync-wiki.yml
astrbot/builtin_stars/astrbot/: main.py  process_llm_request.py
astrbot/builtin_stars/builtin_commands/: main.py
astrbot/builtin_stars/web_searcher/: main.py
astrbot/core/: __init__.py  astr_agent_hooks.py  astr_agent_run_util.py  astr_agent_tool_exec.py  astr_main_agent.py  astr_main_agent_resources.py  core_lifecycle.py  event_bus.py  log.py  persona_mgr.py  subagent_orchestrator.py
astrbot/core/agent/: agent.py  handoff.py  mcp_client.py  tool.py
astrbot/core/computer/: computer_client.py
astrbot/core/config/: default.py
astrbot/core/cron/: __init__.py  events.py  manager.py
astrbot/core/db/: __init__.py  po.py  sqlite.py
astrbot/core/maibot/: __init__.py  main.py
astrbot/core/maibot_adapter/: __init__.py  maibot_logger.py  message_converter.py  platform_adapter.py  response_converter.py
astrbot/core/maibot_instance/: __init__.py  maibot_instance.py  subprocess_entry.py
astrbot/core/message/: components.py  message_event_result.py
astrbot/core/pipeline/: context_utils.py  scheduler.py
astrbot/core/platform/: astr_message_event.py  platform.py  platform_metadata.py
astrbot/core/provider/: entities.py  func_tool_manager.py  manager.py  provider.py
astrbot/core/skills/: __init__.py  skill_manager.py
astrbot/core/star/: command_management.py  config.py  context.py  star_handler.py  star_manager.py
astrbot/core/tools/: cron_tools.py
astrbot/core/utils/: astrbot_path.py  core_constraints.py  history_saver.py  pip_installer.py  requirements_utils.py  shared_preferences.py  trace.py
astrbot/dashboard/: server.py
astrbot/dashboard/routes/: __init__.py  chat.py  config.py  cron.py  live_chat.py  log.py  maibot.py  persona.py  session_management.py  skills.py  subagent.py  tools.py  util.py
changelogs/: v4.12.0.md  v4.12.1.md  v4.12.2.md  v4.12.3.md  v4.12.4.md  v4.13.0.md  v4.13.1.md  v4.13.2.md  v4.19.5.md
dashboard/: index.html  package.json
dashboard/src/: main.ts
dashboard/src/composables/: useInstances.ts  useProviderSources.ts  useVADRecording.ts
dashboard/src/i18n/: loader.ts  translations.ts
dashboard/src/router/: MainRoutes.ts
dashboard/src/stores/: personaStore.ts
dashboard/src/utils/: inputValue.ts  maibotApi.ts
dashboard/src/views/: ConfigPage.vue  CronJobPage.vue  ExtensionPage.vue  MaiBotPage.vue  PersonaPage.vue  SessionManagementPage.vue  SubAgentPage.vue  TracePage.vue
docs/.vitepress/: config.mjs
docs/en/: community.md
docs/en/dev/: astrbot-config.md
docs/zh/: community.md
tests/: test_dashboard.py  test_local_shell_component.py  test_maibot_instance.py  test_maibot_instance_real.py  test_pip_helper_modules.py  test_pip_installer.py  test_plugin_manager.py  test_skill_metadata_enrichment.py
(+633 files in other folders)
